[package]
name = "cproxy"
version = "4.3.0"
authors = ["Xiangru Lian <admin@mail.xrlian.com>", "Light Ning <root@i01.io>"]
description = "Transparent proxy built on cgroup net_cls."
homepage = "https://github.com/NOBLES5E/cproxy"
license = "AGPL-3.0-or-later"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgroups-rs = "0.3"
clap = { version = "4.0", features = ["derive"] }
color-eyre = "0.6"
ctrlc = "3.2"
directories = "4.0"
flume = { version = "0.10", default-features = false }
kdl = "4.6"
lazy-regex = "2.4"
nix = { version = "0.26", default-features = false, features = ["fs", "user"] }
semver = "1.0"
strum = "0.24"
strum_macros = "0.24"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
with_drop = "0.0.3"

[profile.dev.package.backtrace]
opt-level = 3

[profile.release]
lto = true
codegen-units = 1
# strip = "debuginfo"
split-debuginfo = 'packed' # https://doc.rust-lang.org/rustc/codegen-options/index.html#split-debuginfo
